# outsource-mcp

./: .gitignore  .server.py.swp  CLAUDE.md  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  server.py  smithery.yaml  test_server.py
