[project]
name = "outsource-mcp"
version = "0.1.0"
description = "MCP server for outsourcing tasks to AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.5.5",
    "anthropic>=0.52.0",
    "deepseek>=1.0.0",
    "google-genai>=1.16.1",
    "google-generativeai>=0.8.5",
    "groq>=0.25.0",
    "mcp[cli]>=1.9.1",
    "openai>=1.82.0",
]

[project.scripts]
outsource-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.11",
]
